src/objects/AWS_SNS_Notifications__c.object
<CustomObject>
    <fields>
        <fullName>DestinationEmail__c</fullName>
        <label>DestinationEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Campaign_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Campaign Id</label>
        <referenceTo>EmailCampaign__c</referenceTo>
        <relationshipName>AWS_SNS_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Id</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>AWS_SNS_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MessageId__c</fullName>
        <label>MessageId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotificationType__c</fullName>
        <label>NotificationType</label>
        <picklist>
            <picklistValues>
                <fullName>Bounce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN AWS SNS Notifications</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Email_Campaign_Id__c</columns>
        <columns>Event_Id__c</columns>
        <columns>MessageId__c</columns>
        <columns>DestinationEmail__c</columns>
        <columns>NotificationType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>AWS SNS Notifications Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN AWS SNS Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>